--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node Browse.js && docker-compose up",
+    "mongo": "docker exec -it mongo mongo",
+    "stop": "docker stop $(docker ps -aq)"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +16,8 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "mongoose": "^5.4.17"
+  },
+  "devDependencies": {
+    "puppeteer": "^1.19.0"
   }
 }
