--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node Browse.js && docker-compose up",
+    "start": "node Browse.js && docker-compose up -d",
     "mongo": "docker exec -it mongo mongo",
-    "stop": "docker stop $(docker ps -aq)"
+    "list-containers": "docker ps",
+    "remove": "docker rm -f $(docker ps -a -q)",
+    "docker-stop": "docker stop $(docker ps -aq)"
   },
   "keywords": [],
   "author": "",
